log/build_2024-12-06_13-31-19/dc_motor/stdout_stderr.log
running egg_info
writing ../../build/dc_motor/dc_motor.egg-info/PKG-INFO
writing dependency_links to ../../build/dc_motor/dc_motor.egg-info/dependency_links.txt
writing entry points to ../../build/dc_motor/dc_motor.egg-info/entry_points.txt
writing requirements to ../../build/dc_motor/dc_motor.egg-info/requires.txt
writing top-level names to ../../build/dc_motor/dc_motor.egg-info/top_level.txt
reading manifest file '../../build/dc_motor/dc_motor.egg-info/SOURCES.txt'
writing manifest file '../../build/dc_motor/dc_motor.egg-info/SOURCES.txt'
running build
running build_py
copying dc_motor/state_control.py -> /home/cheng/DC_motor/build/dc_motor/build/lib/dc_motor
running install
running install_lib
copying /home/cheng/DC_motor/build/dc_motor/build/lib/dc_motor/state_control.py -> /home/cheng/DC_motor/install/dc_motor/lib/python3.10/site-packages/dc_motor
byte-compiling /home/cheng/DC_motor/install/dc_motor/lib/python3.10/site-packages/dc_motor/state_control.py to state_control.cpython-310.pyc
  File "/home/cheng/DC_motor/install/dc_motor/lib/python3.10/site-packages/dc_motor/state_control.py", line 56
    if abs(self.current_position - self.target_position) < 1e-1 # or current_time >= target_time:  # 允许微小误差或时间到达
                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/cheng/DC_motor/install/dc_motor/lib/python3.10/site-packages/dc_motor-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/dc_motor/dc_motor.egg-info to /home/cheng/DC_motor/install/dc_motor/lib/python3.10/site-packages/dc_motor-0.0.0-py3.10.egg-info
running install_scripts
Installing dc_motor_node script to /home/cheng/DC_motor/install/dc_motor/lib/dc_motor
writing list of installed files to '/home/cheng/DC_motor/build/dc_motor/install.log'
